fixed ur picture spacing in mobile

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ body {
 
 @media only screen and (max-width: 576px) {
     .landing-text h1 {
-      font-size: 50px;
+      font-size: 47px;
       padding-top: 18px;
     }
     .landing-text h3 {
